infrastructure/base/chromadb/chromadb-namespace.yml
# chromadb-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ai-services
  labels:
    name: ai-services
