infrastructure/base/chromadb/chromadb-service.yml
# chromadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chromadb-service
  namespace: ai-services
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.79.31
  ports:
  - port: 8000
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: chromadb
